# broodwarProtosBot

./: .gitignore  flake.nix  run.sh
protossbot/: Cargo.toml
protossbot/.cargo/: config.toml
protossbot/src/: bot.rs  game_state.rs  main.rs  web_server.rs
protossbot/src/state/: build_stages.rs  game_state.rs  mod.rs
protossbot/src/utils/: base_location_utils.rs  build_buildings_utils.rs  build_location_utils.rs  build_manager.rs  debug_utils.rs  map_information.rs  military_management.rs  mod.rs  unit_utils.rs  worker_management.rs
protossbot/src/utils/build_order/: base_location_utils.rs  build_buildings_utils.rs  build_location_utils.rs  build_manager.rs  next_thing_to_build.rs  path_utils.rs
protossbot/src/webserver/: base_locations.rs  build_history.rs  build_status.rs  frame_stats.rs  game_speed.rs  map_info.rs  mod.rs  unit_info.rs  web_server.rs
protossbot/static/: build-history.js  build-status.js  constants.js  frame-stats.js  game-speed.js  index.html  map-display.js  render-base-locations.js  render-tiles.js  style.css
protossbot/static/map/: render-base-locations.js  render-units.js
protossbot/web/: Cargo.toml  Cargo.toml.leptos  README.md
protossbot/web/src/: lib.rs  main.rs
protossbot/web/style/: main.css  protoss-bot-web.js
scripts/: 4-configure-bwapi.sh  5-configure-registry.sh  bwapi-preferences.yml
