[package]
name = "protoss-bot-web"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", default-features = false, features = ["ssr"] }
leptos_axum = { version = "0.6", default-features = false }
leptos_meta = { version = "0.6", default-features = false, features = ["ssr"] }
leptos_router = { version = "0.6", default-features = false, features = ["ssr"] }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4"

[features]
default = ["ssr"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]

[lib]
crate-type = ["cdylib", "rlib"]
